--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import "./styles/theme.css";
+@import "./theme.css";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
 
 :root {
